[metadata]
name = nf04-trace
version = 1.0
author = Teddy Roncin
author_email = teddy.roncin@utt.fr
description = A package used to make the "trace" of a program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teddyroncin
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src